--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -34248,6 +34248,19 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.GromHellscream
   nameWithType: LegendWarsong.GromHellscream
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh
+  name: Jergosh
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html#WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Jergosh
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh
+  nameWithType: LegendWarsong.Jergosh
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh*
+  name: Jergosh
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html#WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Jergosh_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Jergosh
+  nameWithType: LegendWarsong.Jergosh
 - uid: WarcraftLegacies.Source.Setup.Legends.LegendWarsong.Orgrimmar
   name: Orgrimmar
   href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendWarsong.html#WarcraftLegacies_Source_Setup_Legends_LegendWarsong_Orgrimmar
